--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-site-verification" content="kZPHrlTiO-reMsyW1yKE0nasZvdttHCSYVNWv07Cg0Q" />
     <link href="/src/styles.css" rel="stylesheet">
-    <title>Vite + React + TS</title>
+    <title>AlgoMate</title>
   </head>
   <body>
     <div id="root"></div>
